<resources>
    <string name="app_name">SlotBooking</string>
    <string name="login">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="tv_login_link_to_signup">Not a member?\n Create an account</string>
    <string name="username">Username</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">\n OR \n</string>
    <string name="solo">SOLO</string>
    <string name="duo">DUO</string>
    <string name="squad">SQUAD</string>
    <string name="fill_detail">Fill the required Details</string>
    <string name="confirm_pay">Proceed to Payment</string>
    <string name="leader_in_game_name">Leader In-game Name</string>
    <string name="_2_in_game_name">#2 In-game Name</string>
    <string name="name">Name</string>
    <string name="_4_in_game_name">#4 In-game Name</string>
    <string name="_3in_game_name">#3 In-game Name</string>
    <string name="team_name">Team Name</string>
    <string name="squad_details">Welcome to PUBG Squads \n\n Please fill the necessary details</string>
    <string name="duo_details">Welcome to PUBG Duo \n\n Please fill the necessary details</string>
    <string name="solo_details">Welcome to PUBG Solo \n\n Please fill the necessary details</string>

    <!--Google SignIn -->
    <string name="disconnect">Disconnect</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_out">Signed out</string>
    <string name="refresh_token">Get Fresh Token</string>
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
    <string name="signed_in">Signed in</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <string name="store_name" translatable="false">My Online Store</string>
    <string name="googlepay_status_unavailable" translatable="false">Unfortunately, Google Pay is not available on this phone.</string>
    <string name="googlepay_status_checking" translatable="false">Checking if Google Pay is available...</string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for %s!</string>
    <string name="select_a_slot">Select a slot:</string>
    <string name="join_as_a_host">Join as a Host</string>
    <string name="company_logo">Company Logo</string>
    <string name="title_activity_admin_add_match">AdminAddMatch</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="match_type">Match Type</string>
    <string name="player_joined">Player Joined</string>
    <string name="player_remaining">Player Remaining</string>
    <string name="entry_fee">Entry Fee</string>
    <string name="money_break_up">Money Break Up</string>
    <string name="winnings">Winnings</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="mode">Mode</string>
    <string name="map">Map</string>
    <string name="are_you_sure">Do you want to delete this match ?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="room_id">Room Id</string>
    <string name="enter_custom_room_password">Enter Custom Room Password</string>
    <string name="enter_custom_room_id">Enter Custom Room Id</string>
    <string name="room_password">Room Password</string>
    <string name="fcm_token">FCM Token: %s</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="title_activity_main5">Main5Activity</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home_fragment_text"><![CDATA[MyKnot Gaming brings you the most awaited custom gaming experience with 100% true Battle Royale Matches. Join us right now and drop into a match to test your skills & earn rewards.]]></string>
    <string name="tv_home_sharing">Join us on other platforms and stay connected</string>
    <string name="organiser_logo">Organiser Logo</string>
    <string name="pubg">PUBG</string>
    <string name="cod">COD</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
