<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".Login.LoginActivity">

    <ProgressBar
        android:id="@+id/login_progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signed_out"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:visibility="gone"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryLight"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:outlineAmbientShadowColor="@color/colorPrimaryLight"
            android:textColor="@color/colorTextPrimary"
            android:textColorHint="@color/colorTextSecondary"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorPrimaryLight"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:outlineAmbientShadowColor="@color/colorPrimaryLight"
            android:textColor="@color/colorTextPrimary"
            android:textColorHint="@color/colorTextSecondary"
            android:textSize="20sp"
            android:autofillHints="@string/password" />


        <Button
            android:id="@+id/btn_login"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            android:background="@color/colorPrimaryLight"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/or"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            />

        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryLight"
            android:text="@string/create_account"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/host_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:text="@string/join_as_a_host"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        />


</LinearLayout>