<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".Registration.Solo">

    <ProgressBar
        android:id="@+id/duo_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"

        android:visibility="gone"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/tv_duo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="100dp"
            android:text="@string/duo_details"
            />

        <EditText
            android:id="@+id/et_duo_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:inputType="textPersonName"
            android:hint="@string/team_name"
            android:autofillHints="Team Name"
            />

        <EditText
            android:id="@+id/et_duo_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:inputType="textPersonName"
            android:hint="@string/leader_in_game_name"
            android:autofillHints="Team leader"
            />

        <EditText
            android:id="@+id/et_duo_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:inputType="textPersonName"
            android:hint="@string/_2_in_game_name"
            android:autofillHints="Player 2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp">

            <TextView
                android:id="@+id/tv_slot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/select_a_slot"
                />

            <Spinner
                android:id="@+id/spinner_duo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="center"
                />

        </LinearLayout>

        <Button
            android:id="@+id/btn_duo_submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/confirm_pay"
            android:layout_marginBottom="20dp"
            />
    </LinearLayout>
</LinearLayout>