<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Login.SignUpActivity">

    <ProgressBar
        android:id="@+id/signup_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/acct_signup_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/signup_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:outlineAmbientShadowColor="@color/colorPrimaryLight"
            android:textColor="@color/colorTextPrimary"
            android:textColorHint="@color/colorTextSecondary"
            android:backgroundTint="@color/colorPrimaryLight"
            android:maxLines="1"
            android:paddingBottom="16dp"
            android:autofillHints="@string/username" />

        <AutoCompleteTextView
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:outlineAmbientShadowColor="@color/colorPrimaryLight"
            android:textColor="@color/colorTextPrimary"
            android:textColorHint="@color/colorTextSecondary"
            android:backgroundTint="@color/colorPrimaryLight"
            android:maxLines="1" />

        <EditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:outlineAmbientShadowColor="@color/colorPrimaryLight"
            android:textColor="@color/colorTextPrimary"
            android:textColorHint="@color/colorTextSecondary"
            android:backgroundTint="@color/colorPrimaryLight"
            android:maxLines="1"
            android:layout_marginBottom="50dp"
            android:autofillHints="@string/password" />


        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@color/colorPrimary"
            android:background="@color/colorPrimaryLight"
            android:textSize="16sp" />


    </LinearLayout>

</LinearLayout>